nothing new just backup

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ h2{
     clear:both
 }
 .entry-thumbnail{
-    margin:0px;
+    margin-right: 7px;
     border:2px solid #fff;
     box-shadow:0 2px 5px #ccc;
     height:100%;
@@ -139,25 +139,19 @@ h2{
     text-overflow:ellipsis;
     
 }
-.song-name{
-    padding:0 5px;
-    max-width:250px;
-    white-space:nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis
-}
+
 .entry-content h2{
-    margin-bottom:10px;
-    padding-top:5px;
-    padding-left:3px;
-    border:green solid 2px;
+    margin-bottom:8px;
+    padding: 0px;
+
+    
 
 }
 .entry-content p{
     margin-bottom:15px;
     margin-top:25px;
     text-align:left;
-    border:red solid 2px;
+    background-color: lightgrey;
 }
 .entry-content ul{
     border-top:1px solid #e6e6e6;
@@ -321,7 +315,9 @@ h2{
                                  <div class="clearfix"></div>
                               </div>
                               <div class="clearfix"></div>
-                              <p>Movie Name : <b>1983 - (2014)</b><br>Music : Gopi Sundar<br>Lyrics : <b>Hari Narayanan</b></p>
+                              <p><b>Movie Name :</b> 1983 - (2014)<br>
+                              <b>Music :</b> Gopi Sundar<br>
+                              <b>Lyrics :</b> Hari Narayanan</p>
 
                               <p><em>Olanjali Kuruvi Lyrics – Olanjali Kuruvi Song is sung by P Jayachandran & Vani Jayaram, composed by Gopi Sunder with lyrics penned by Hari Narayanan.</em></p>
 <div>
