nothing musch just backup

--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@ h2{
     outline:0;
     font-size:18px
 }
+
+.lyics-heading {
+	font-size: 20px;
+	font-color:#0a89c0!important;
+}
+
 #site-bottom,#site-bottom a:hover,#site-bottom a:link,#site-bottom a:visited{
     font-size:14px;
     padding:15px 0;
@@ -320,115 +326,31 @@ h2{
                               <b>Lyrics :</b> Hari Narayanan</p>
 
                               <p><em>Olanjali Kuruvi Lyrics – Olanjali Kuruvi Song is sung by P Jayachandran & Vani Jayaram, composed by Gopi Sunder with lyrics penned by Hari Narayanan.</em></p>
-<div>
-  <div style="text-align: left;">
-    <span style="background-color: white;"
-      ><font face="helvetica"
-        >Olanjali kuruvi, ilam Kaattilaadi Varu nee..</font
-      ></span
-    >
-  </div>
-  <div style="text-align: left;">
-    <span style="background-color: white;"
-      ><font face="helvetica"
-        >Koottukoodi kinungi, mizhippeeli melle thazhuki..</font
-      ></span
-    >
-  </div>
-  <font face="helvetica"
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Olenjaali kuruvee, ilam Kaattilaadi Varu nee..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Koottukoodi kinungi, mizhippeeli melle thazhuki..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Cherumashithandu neetti vannaduthu ninnuvo..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Manimadhuram nunayum kanavin mazhayilo…</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Nanayum njaanadhyamay..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Koottukoodi kinungi, mizhippeeli melle thazhuki..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Nee nin Mizhikalil… ilaveyilil thiriyumaay varikayo…</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Janalazhivazhi pakarum… nanu naneyoru madhuram…</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Oru kudayude thanalilanayum neram… pozhiyum mazhayil..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Koottukoodi kinungi, mizhippeeli melle thazhuki..</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Poonthen mozhikalaal… kurumani kuyilupol kurukuvaan…</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Kalichiriyude viralaal, thodukuriyidumazhakaay,</span>
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span
-          >Cheru kolussinte kilukilukkathhil, thaalam manassil nirayum..</span
-        >
-      </div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;"><br /></div></span
-    ><span
-      style="background-color: white; border: 0px; font-stretch: inherit; font-variant-east-asian: inherit; font-variant-numeric: inherit; line-height: inherit; margin: 0px; padding: 0px; vertical-align: baseline;"
-      ><div style="text-align: left;">
-        <span>Koottukoodi kinungi, mizhippeeli melle thazhuki..</span>
-      </div></span
-    ></font
-  >
-</div>
+                              <div class="main-content" style="text-align: left; ">
+                              	<div class="lyics-heading">Olanjali Kuruvi Song Lyrics in English</div>
+                              	Olanjali kuruvi, ilam Kaattilaadi Varu nee..<br>
+                              	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
+                              	Olenjaali kuruvee, ilam Kaattilaadi Varu nee..<br>
+                              	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
+
+                              	Cherumashithandu neetti vannaduthu ninnuvo..<br>
+                              	Manimadhuram nunayum kanavin mazhayilo…<br>
+                              	Nanayum njaanadhyamay..<br>
+
+                              	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
+
+                              	Nee nin Mizhikalil… ilaveyilil thiriyumaay varikayo…<br>
+                              	Janalazhivazhi pakarum… nanu naneyoru madhuram…<br>
+                              	Oru kudayude thanalilanayum neram… pozhiyum mazhayil..<br>
+
+                              	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
+
+                              	Poonthen mozhikalaal… kurumani kuyilupol kurukuvaan…<br>
+                              	Kalichiriyude viralaal, thodukuriyidumazhakaay,<br>
+                              	Cheru kolussinte kilukilukkathhil, thaalam manassil nirayum..<br>
+
+                              	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
+                              </div>
                               <h2><b>Dirty Hari Songs free download</b> Keywords:</h2>
                               <ul>
                                  <li>Dirty Hari songs download from naasongs</li>
