--- a/index.html
+++ b/index.html
@@ -181,9 +181,15 @@ h2{
     font-size:18px
 }
 
-.lyics-heading {
-	font-size: 20px;
+.lyrics-heading {
+	font-size: 18px;
 	font-color:#0a89c0!important;
+	padding :5px;
+	margin-bottom: 8px;
+}
+
+.lyrics-side{
+	border-left: 2px solid #76c20b;
 }
 
 #site-bottom,#site-bottom a:hover,#site-bottom a:link,#site-bottom a:visited{
@@ -327,7 +333,7 @@ h2{
 
                               <p><em>Olanjali Kuruvi Lyrics – Olanjali Kuruvi Song is sung by P Jayachandran & Vani Jayaram, composed by Gopi Sunder with lyrics penned by Hari Narayanan.</em></p>
                               <div class="main-content" style="text-align: left; ">
-                              	<div class="lyics-heading">Olanjali Kuruvi Song Lyrics in English</div>
+                              	<div class="lyrics-heading lyrics-side">Olanjali Kuruvi Song Lyrics in English</div>
                               	Olanjali kuruvi, ilam Kaattilaadi Varu nee..<br>
                               	Koottukoodi kinungi, mizhippeeli melle thazhuki..<br>
                               	Olenjaali kuruvee, ilam Kaattilaadi Varu nee..<br>
