--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155084583-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-155084583-2');
+    </script>
     <link rel="profile" href="https://gmpg.org/xfn/11" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap"
