--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                       <b>Music :</b> Gopi Sundar<br />
                       <b>Lyrics :</b> Hari Narayanan
                     </p>
-                    <img src="https://github.com/preyasprathap/mangosite/blob/master/wallhaven-k7zpgd.jpg">
+                    <img src="https://raw.githubusercontent.com/preyasprathap/mangosite/master/wallhaven-k7zpgd.jpg">
                     <p>
                       <em
                         >Olanjali Kuruvi Lyrics – Olanjali Kuruvi Song is sung
